
- GPR#2265: Add bytecomp/opcodes.mli
  (Mark Shinwell, review by Nicolas Ojeda Bar)

- GPR#2280: Don't make more Clambda constants after starting Cmmgen
  (Mark Shinwell, review by Vincent Laviron)

- GPR#2283: Add [is_prefix] and [find_and_chop_longest_common_prefix] to
  [Misc.Stdlib.List]
  (Mark Shinwell, review by Alain Frisch and Stephen Dolan)

- GPR#2286: Functorise [Consistbl]
  (Mark Shinwell, review by Gabriel Radanne)

### Runtime system:

- GPR#1725: Deprecate Obj.set_tag
  (Stephen Dolan, review by Gabriel Scherer and Damien Doligez)

* GPR#2240: Constify "identifier" in struct custom_operations
  (Cedric Cellier, review by Xavier Leroy)

### Standard library:

- GPR#2262: take precision (.<n>) and flags ('+' and ' ') into account
  in printf %F
  (Pierre Roux, review by Gabriel Scherer)

### Other libraries:

- MPR#7903, GPR#2306: Make Thread.delay interruptible by signals again
  (Xavier Leroy, review by Jacques-Henri Jourdan and Edwin Török)

- GPR#2248: Unix alloc_sockaddr: Fix read of uninitialized memory for an
  unbound Unix socket. Add support for receiving abstract (Linux) socket paths.
  (Tim Cuthbertson, review by Sébastien Hinderer and Jérémie Dimino)

- GPR#2289: Delete the vmthreads library. This library was deprecated in 4.08.0.
  (Jérémie Dimino)

### Compiler user-interface and warnings:

- GPR#2301: Hint on type error on int literal
  (Jules Aguillon, review by Nicolás Ojeda Bär , Florian Angeletti,
  Gabriel Scherer and Armaël Guéneau)

- GPR#2307: Hint on type error on int's operators
  (Jules Aguillon, with help from Armaël Guéneau,
   review by Gabriel Scherer and Florian Angeletti)

### Bug fixes:

- MPR#7937, GPR#2287: fix uncaught Unify exception when looking for type
  declaration
  (Florian Angeletti, review by Jacques Garrigue)

OCaml 4.08.0
------------

### Language features:

- MPR#6422, MPR#7083, GPR#305, GPR#1568: Allow "exception" under or-patterns